setup/ingress-nexus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nexus
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: nexus.pipeline.rebaze.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 8081
  tls:
    - hosts:
      - nexus.pipeline.rebaze.io
      secretName: nexus-cert # < cert-manager will store the created certificate in this secret.
